# pdu

./: .gitignore  GEMINI.md  README.md  RULES.md  debug_q.py  debug_q2.py  debug_v10_al.py  gemini-conversation-1769751999322.json  pyproject.toml  requirements.txt  test_v10_1_nm.py  test_v10_1_tritonal.py  v8_comprehensive_test.py  verification_results.json  verify_compb.py  verify_p1_setup.py  verify_p2_flux.py  verify_p3_bisection.py  verify_p3_shooting.py  verify_p3_solver.py  verify_p4_calibration.py
docs/: dev_log.md  project_whitepaper.md  v10_1_deficit_analysis.md  v10_5_performance_report.md  v10_final_report.md  v10_performance_report.md  v8.2_evolution_report.md  v8.3_consultation_request.md  v8_4_technical_consultation.md  v8_4_thermo_mechanics_consultation.md  v8_5_performance_report.md  v8_5_pressure_deficit_technical_consultation.md  v8_6_jwl_optimization_consultation.md  v8_6_performance_report.md  v8_consultation_request.md  v8_performance_report.md  两相流转型咨询需求书.md  反馈意见.md  回复.md
documents/: HMX_V11_Consultation_Request.md  dev_log.md  回复.md  技术反馈落实情况报告_v3.md  爆轰状态计算温度异常咨询报告.md
pdu/: __init__.py  api.py
pdu/ai/: __init__.py  projection.py  warmstart.py
pdu/calibration/: differentiable_cj_enhanced.py  expert_refinement_shell.py  inverse_solver.py  pso.py
pdu/core/: __init__.py  equilibrium.py  types.py
pdu/data/: __init__.py  components.py  jcz3_params.json  jwl_experimental.json  products.json  products.py  reactants.json
pdu/flux/: __init__.py  drag.py  heat.py
pdu/inverse/: __init__.py  constraints.py  loss.py  optimizer.py
pdu/mapper/: jwl.py
pdu/physics/: __init__.py  eos.py  jwl.py  kinetics.py  potential.py  sensitivity.py  thermo.py
temp/: bundle_project.py  pdu_project_bundle.json
tools/: import_burcat.py  upgrade_to_nasa9.py
(+33 files in other folders)
